--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </style>
 </head>
 <body>
-  <div id="the_text">Hey! Im a text! I will be converted to an image</div>
+  <textarea id="the_text">
+     Hey! Im a text! I will be converted to an image
+  </textarea>
   <button id="show_img_btn">Convert to Image</button>
   <div id="show_img_here"></div>
 
@@ -30,7 +32,7 @@
         canvas.height = 80;
         var ctx = canvas.getContext('2d');
         ctx.font = "30px Arial";
-        var text = $("#the_text").text();
+        var text = $("#the_text").value();
         ctx.fillText(text,10,50);
         var img = document.createElement("img");
         var link = canvas.toDataURL();
