--- a/index.html
+++ b/index.html
@@ -1,45 +1,135 @@
 <html>
+
 <head>
-<style>
-  canvas{
-    border: 1px solid red;
-  }
-</style>
+  <style>
+    #textCanvas {
+      display: none;
+    }
+
+    .wrap {
+      padding: 30px;
+    }
+
+    p {
+      background-color: #ddd;
+      padding: 20px;
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
+
 <body>
-  <textarea id="the_text">Hey! Im a text! I will be converted to an image</textarea>
-  <button id="show_img_btn">Convert to Image</button>
-  <div id="show_img_here"></div>
+  <div class="wrap">
+    <h1>Steganography</h1>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script>
-      function downloadURI(uri, name) {
-  var link = document.createElement("a");
-  link.download = name;
-  link.href = uri;
-  document.body.appendChild(link);
-  link.click();
-  document.body.removeChild(link);
-  delete link;
-}
-      
-    window.onload=function(){
-      $("#show_img_btn").on("click", function () {
-        var canvas = document.createElement("canvas");
-        canvas.width = 620;
-        canvas.height = 80;
-        var ctx = canvas.getContext('2d');
-        ctx.font = "30px Arial";
-        var text = $("#the_text").val();
-        ctx.fillText(text,10,50);
-        var img = document.createElement("img");
-        var link = canvas.toDataURL();
-        img.src= canvas.toDataURL()
-        $("#show_img_here").append(img);
-        downloadURI(canvas.toDataURL("image/png"), "test.png");
-      });
-    };
-    </script>
+    <h2>Encode an image with a message</h2>
+    <label>Enter a message to hide within the image:</label><br />
+    <input type="password" id="message" placeholder="Enter your secret message"></br>
+    <label>Upload an image image:</label><br />
+    <input type="file" id="imageLoader" name="imageLoader" />
+    <canvas id="imageCanvas"></canvas>
+    <canvas id="textCanvas"></canvas>
+    <hr>
+    <h2>Decode an image</h2>
+    <label>Upload an image:</label><br />
+    <input type="file" id="imageLoader2" name="imageLoader2" />
+    <canvas id="imageCanvas2"></canvas>
+  </div>
+  <script>
+    function handleImage(e) {
+      var reader = new FileReader();
+
+      reader.onload = function (event) {
+        var img = new Image();
+
+        img.onload = function () {
+          canvas.width = img.width;
+          canvas.height = img.height;
+          textCanvas.width = img.width;
+          textCanvas.height = img.height;
+          tctx.font = "30px Arial";
+          var messageText = (messageInput.value.length) ? messageInput.value : 'Hello';
+          tctx.fillText(messageText, 10, 50);
+          ctx.drawImage(img, 0, 0);
+          var imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+          var textData = tctx.getImageData(0, 0, canvas.width, canvas.height);
+          var pixelsInMsg = 0;
+          pixelsOutMsg = 0;
+          for (var i = 0; i < textData.data.length; i += 4) {
+            if (textData.data[i + 3] !== 0) {
+              if (imgData.data[i + 1] % 10 == 7) continue;
+              if (imgData.data[i + 1] > 247) {
+                imgData.data[i + 1] = 247;
+              }
+              else {
+                while (imgData.data[i + 1] % 10 != 7) {
+                  imgData.data[i + 1]++;
+                }
+              }
+              pixelsInMsg++;
+            }
+            else {
+              if (imgData.data[i + 1] % 10 == 7) {
+                imgData.data[i + 1]--;
+              }
+              pixelsOutMsg++;
+            }
+          }
+          console.log('Pixels In Message: ' + pixelsInMsg);
+          console.log('Pixels Out Message: ' + pixelsOutMsg);
+          ctx.putImageData(imgData, 0, 0);
+        };
+
+        img.src = event.target.result;
+      }
+
+      reader.readAsDataURL(e.target.files[0]);
+    }
+
+    function handleImage2(e) {
+      console.log('handle image 2');
+      var reader2 = new FileReader();
+      reader2.onload = function (event) {
+        console.log('reader2 loaded');
+        var img2 = new Image();
+        img2.onload = function () {
+          console.log('img2 loaded');
+          decodeCanvas.width = img2.width;
+          decodeCanvas.height = img2.height;
+          dctx.drawImage(img2, 0, 0);
+          var decodeData = dctx.getImageData(0, 0, decodeCanvas.width, decodeCanvas.height);
+          for (var i = 0; i < decodeData.data.length; i += 4) {
+            if (decodeData.data[i + 1] % 10 == 7) {
+              decodeData.data[i] = 0;
+              decodeData.data[i + 1] = 0;
+              decodeData.data[i + 2] = 0;
+              decodeData.data[i + 3] = 255;
+            }
+            else {
+              decodeData.data[i + 3] = 0;
+            }
+          }
+          dctx.putImageData(decodeData, 0, 0);
+        };
+        img2.src = event.target.result;
+      };
+      reader2.readAsDataURL(e.target.files[0]);
+    }
+
+    var imageLoader = document.getElementById('imageLoader');
+    imageLoader.addEventListener('change', handleImage, false);
+
+    var canvas = document.getElementById('imageCanvas');
+    var messageInput = document.getElementById('message');
+    var decodeCanvas = document.getElementById('imageCanvas2');
+    var imageLoader2 = document.getElementById('imageLoader2');
+    var textCanvas = document.getElementById('textCanvas');
+
+    var tctx = textCanvas.getContext('2d');
+    var ctx = canvas.getContext('2d');
+    var dctx = decodeCanvas.getContext('2d');
+    imageLoader2.addEventListener('change', handleImage2, false);
+  </script>
 </body>
-</html>
 
+</html>
