--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <html>
 
 <head>
-  <style>
-    #textCanvas {
-      display: none;
-    }
-
-    .wrap {
-      padding: 30px;
-    }
-
-    p {
-      background-color: #ddd;
-      padding: 20px;
-      border: 1px solid #ccc;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <div class="wrap">
-    <h1>Steganography</h1>
+  <div class="container">
+    <h1><i>Steganography</i> dengan Javascript</h1>
 
-    <h2>Encode an image with a message</h2>
-    <label>Enter a message to hide within the image:</label><br />
-    <input type="password" id="message" placeholder="Enter your secret message"></br>
-    <label>Upload an image image:</label><br />
-    <input type="file" id="imageLoader" name="imageLoader" />
-    <canvas id="imageCanvas"></canvas>
-    <canvas id="textCanvas"></canvas>
+    <h2><i>Encode</i> sebuah gambar dengan sebuah pesan didalamnya</h2>
+
+    <label for="message" class="form-label">Pesan Rahasia</label><br />
+    <textarea class="form-control" style="width: 100%" type="password" id="message"
+      placeholder="Ketik apa saja"></textarea>
+    </br>
+
+    <label for="encodeInput" class="form-label">Lalu pilih sebuah gambar:</label><br />
+    <input class="form-control" type="file" id="encodeInput" name="encodeInput">
+
+    <div class="py-1 mt-1 text-center">
+      <canvas style="height: 150px;" id="encodeCanvas"></canvas>
+      <canvas style="display: none;" id="textCanvas"></canvas>
+    </div>
+
+
     <hr>
-    <h2>Decode an image</h2>
-    <label>Upload an image:</label><br />
-    <input type="file" id="imageLoader2" name="imageLoader2" />
-    <canvas id="imageCanvas2"></canvas>
+
+    <h2><i>Decode</i> gambar yang telah di <i>encode</i></h2>
+
+    <label for="decoderInput" class="form-label">Lalu pilih sebuah gambar:</label><br />
+    <input class="form-control" type="file" id="decoderInput" name="decoderInput">
+    <canvas id="decodeCanvas"></canvas>
   </div>
   <script>
-    function handleImage(e) {
+    function download(uri, name) {
+      var link = document.createElement("a");
+      link.setAttribute('download', name);
+      link.href = uri;
+      document.body.appendChild(link);
+      link.click();
+      link.remove();
+    }
+
+    function endcode(e) {
       var reader = new FileReader();
 
       reader.onload = function (event) {
@@ -48,7 +56,7 @@
           textCanvas.width = img.width;
           textCanvas.height = img.height;
           tctx.font = "30px Arial";
-          var messageText = (messageInput.value.length) ? messageInput.value : 'Hello';
+          var messageText = (messageInput.value.length) ? messageInput.value : '(Asli tanpa text)';
           tctx.fillText(messageText, 10, 50);
           ctx.drawImage(img, 0, 0);
           var imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
@@ -75,22 +83,24 @@
               pixelsOutMsg++;
             }
           }
-          console.log('Pixels In Message: ' + pixelsInMsg);
-          console.log('Pixels Out Message: ' + pixelsOutMsg);
           ctx.putImageData(imgData, 0, 0);
         };
 
         img.src = event.target.result;
+        download(img, 'Steganography Result');
       }
+
+
+
+
 
       reader.readAsDataURL(e.target.files[0]);
     }
 
-    function handleImage2(e) {
+    function decode(e) {
       console.log('handle image 2');
       var reader2 = new FileReader();
       reader2.onload = function (event) {
-        console.log('reader2 loaded');
         var img2 = new Image();
         img2.onload = function () {
           console.log('img2 loaded');
@@ -116,20 +126,25 @@
       reader2.readAsDataURL(e.target.files[0]);
     }
 
-    var imageLoader = document.getElementById('imageLoader');
-    imageLoader.addEventListener('change', handleImage, false);
+    var encodeInput = document.getElementById('encodeInput');
+    encodeInput.addEventListener('change', endcode, false);
 
-    var canvas = document.getElementById('imageCanvas');
+    var canvas = document.getElementById('encodeCanvas');
     var messageInput = document.getElementById('message');
-    var decodeCanvas = document.getElementById('imageCanvas2');
-    var imageLoader2 = document.getElementById('imageLoader2');
+    var decodeCanvas = document.getElementById('decodeCanvas');
+    var decoderInput = document.getElementById('decoderInput');
     var textCanvas = document.getElementById('textCanvas');
 
     var tctx = textCanvas.getContext('2d');
     var ctx = canvas.getContext('2d');
     var dctx = decodeCanvas.getContext('2d');
-    imageLoader2.addEventListener('change', handleImage2, false);
+    decoderInput.addEventListener('change', decode, false);
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
